src/forklift_gazebo/build_output.log
Starting >>> forklift_gazebo
--- stderr: forklift_gazebo
/home/jaikrrishs/Desktop/forklift_gazebo/src/forklift_gazebo/plugins/fork_lift_freebody_world.cc: In member function ‘virtual void forklift_gazebo::ForkLiftFreeBodyWorld::Configure(const gz::sim::v8::Entity&, const std::shared_ptr<const sdf::v14::Element>&, gz::sim::v8::EntityComponentManager&, gz::sim::v8::EventManager&)’:
/home/jaikrrishs/Desktop/forklift_gazebo/src/forklift_gazebo/plugins/fork_lift_freebody_world.cc:42:45: error: ‘_eventMgr’ was not declared in this scope
   42 |     gz::sim::SdfEntityCreator creator(_ecm, _eventMgr);
      |                                             ^~~~~~~~~
/home/jaikrrishs/Desktop/forklift_gazebo/src/forklift_gazebo/plugins/fork_lift_freebody_world.cc:26:41: warning: unused parameter ‘_entity’ [-Wunused-parameter]
   26 |   void Configure(const gz::sim::Entity &_entity,
      |                  ~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
/home/jaikrrishs/Desktop/forklift_gazebo/src/forklift_gazebo/plugins/fork_lift_freebody_world.cc:27:61: warning: unused parameter ‘_sdf’ [-Wunused-parameter]
   27 |                  const std::shared_ptr<const sdf::Element> &_sdf,
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
/home/jaikrrishs/Desktop/forklift_gazebo/src/forklift_gazebo/plugins/fork_lift_freebody_world.cc: In member function ‘void forklift_gazebo::ForkLiftFreeBodyWorld::AddModel(gz::sim::v8::SdfEntityCreator&, const std::string&, const std::string&, double, double, double)’:
/home/jaikrrishs/Desktop/forklift_gazebo/src/forklift_gazebo/plugins/fork_lift_freebody_world.cc:54:44: warning: unused parameter ‘_creator’ [-Wunused-parameter]
   54 |   void AddModel(gz::sim::SdfEntityCreator &_creator,
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
/home/jaikrrishs/Desktop/forklift_gazebo/src/forklift_gazebo/plugins/forklift.cc: In member function ‘virtual void forklift_gazebo::ForkLiftPlugin::Configure(const gz::sim::v8::Entity&, const std::shared_ptr<const sdf::v14::Element>&, gz::sim::v8::EntityComponentManager&, gz::sim::v8::EventManager&)’:
/home/jaikrrishs/Desktop/forklift_gazebo/src/forklift_gazebo/plugins/forklift.cc:44:50: warning: unused parameter ‘_sdf’ [-Wunused-parameter]
   44 |       const std::shared_ptr<const sdf::Element> &_sdf,
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
/home/jaikrrishs/Desktop/forklift_gazebo/src/forklift_gazebo/plugins/fork_lift_world.cc: In member function ‘virtual void forklift_gazebo::ForkLiftWorld::Configure(const gz::sim::v8::Entity&, const std::shared_ptr<const sdf::v14::Element>&, gz::sim::v8::EntityComponentManager&, gz::sim::v8::EventManager&)’:
/home/jaikrrishs/Desktop/forklift_gazebo/src/forklift_gazebo/plugins/fork_lift_world.cc:39:45: error: ‘_eventMgr’ was not declared in this scope
   39 |     gz::sim::SdfEntityCreator creator(_ecm, _eventMgr);
      |                                             ^~~~~~~~~
/home/jaikrrishs/Desktop/forklift_gazebo/src/forklift_gazebo/plugins/fork_lift_world.cc:25:41: warning: unused parameter ‘_entity’ [-Wunused-parameter]
   25 |   void Configure(const gz::sim::Entity &_entity,
      |                  ~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
/home/jaikrrishs/Desktop/forklift_gazebo/src/forklift_gazebo/plugins/fork_lift_world.cc:26:61: warning: unused parameter ‘_sdf’ [-Wunused-parameter]
   26 |                  const std::shared_ptr<const sdf::Element> &_sdf,
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
/home/jaikrrishs/Desktop/forklift_gazebo/src/forklift_gazebo/plugins/fork_lift_world.cc: In member function ‘void forklift_gazebo::ForkLiftWorld::AddModel(gz::sim::v8::SdfEntityCreator&, const std::string&, const std::string&, double, double, double)’:
/home/jaikrrishs/Desktop/forklift_gazebo/src/forklift_gazebo/plugins/fork_lift_world.cc:50:44: warning: unused parameter ‘_creator’ [-Wunused-parameter]
   50 |   void AddModel(gz::sim::SdfEntityCreator &_creator,
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
gmake[2]: *** [CMakeFiles/ForkLiftFreeBodyWorld.dir/build.make:76: CMakeFiles/ForkLiftFreeBodyWorld.dir/plugins/fork_lift_freebody_world.cc.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:221: CMakeFiles/ForkLiftFreeBodyWorld.dir/all] Error 2
gmake[1]: *** Waiting for unfinished jobs....
gmake[2]: *** [CMakeFiles/ForkLiftWorld.dir/build.make:76: CMakeFiles/ForkLiftWorld.dir/plugins/fork_lift_world.cc.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:169: CMakeFiles/ForkLiftWorld.dir/all] Error 2
/home/jaikrrishs/Desktop/forklift_gazebo/src/forklift_gazebo/plugins/forklift_freebody.cc: In member function ‘virtual void forklift_gazebo::ForkLiftFreeBodyPlugin::Configure(const gz::sim::v8::Entity&, const std::shared_ptr<const sdf::v14::Element>&, gz::sim::v8::EntityComponentManager&, gz::sim::v8::EventManager&)’:
/home/jaikrrishs/Desktop/forklift_gazebo/src/forklift_gazebo/plugins/forklift_freebody.cc:42:61: warning: unused parameter ‘_sdf’ [-Wunused-parameter]
   42 |                  const std::shared_ptr<const sdf::Element> &_sdf,
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
gmake: *** [Makefile:146: all] Error 2
---
Failed   <<< forklift_gazebo [16.0s, exited with code 2]

Summary: 0 packages finished [16.1s]
  1 package failed: forklift_gazebo
  1 package had stderr output: forklift_gazebo
Starting >>> forklift_gazebo
--- stderr: forklift_gazebo
/home/jaikrrishs/Desktop/forklift_gazebo/src/forklift_gazebo/plugins/fork_lift_freebody_world.cc: In member function ‘virtual void forklift_gazebo::ForkLiftFreeBodyWorld::Configure(const gz::sim::v8::Entity&, const std::shared_ptr<const sdf::v14::Element>&, gz::sim::v8::EntityComponentManager&, gz::sim::v8::EventManager&)’:
/home/jaikrrishs/Desktop/forklift_gazebo/src/forklift_gazebo/plugins/fork_lift_freebody_world.cc:26:41: warning: unused parameter ‘_entity’ [-Wunused-parameter]
   26 |   void Configure(const gz::sim::Entity &_entity,
      |                  ~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
/home/jaikrrishs/Desktop/forklift_gazebo/src/forklift_gazebo/plugins/fork_lift_freebody_world.cc:27:61: warning: unused parameter ‘_sdf’ [-Wunused-parameter]
   27 |                  const std::shared_ptr<const sdf::Element> &_sdf,
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
/home/jaikrrishs/Desktop/forklift_gazebo/src/forklift_gazebo/plugins/fork_lift_freebody_world.cc: In member function ‘void forklift_gazebo::ForkLiftFreeBodyWorld::AddModel(gz::sim::v8::SdfEntityCreator&, const std::string&, const std::string&, double, double, double)’:
/home/jaikrrishs/Desktop/forklift_gazebo/src/forklift_gazebo/plugins/fork_lift_freebody_world.cc:54:44: warning: unused parameter ‘_creator’ [-Wunused-parameter]
   54 |   void AddModel(gz::sim::SdfEntityCreator &_creator,
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
/home/jaikrrishs/Desktop/forklift_gazebo/src/forklift_gazebo/plugins/fork_lift_world.cc: In member function ‘virtual void forklift_gazebo::ForkLiftWorld::Configure(const gz::sim::v8::Entity&, const std::shared_ptr<const sdf::v14::Element>&, gz::sim::v8::EntityComponentManager&, gz::sim::v8::EventManager&)’:
/home/jaikrrishs/Desktop/forklift_gazebo/src/forklift_gazebo/plugins/fork_lift_world.cc:25:41: warning: unused parameter ‘_entity’ [-Wunused-parameter]
   25 |   void Configure(const gz::sim::Entity &_entity,
      |                  ~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
/home/jaikrrishs/Desktop/forklift_gazebo/src/forklift_gazebo/plugins/fork_lift_world.cc:26:61: warning: unused parameter ‘_sdf’ [-Wunused-parameter]
   26 |                  const std::shared_ptr<const sdf::Element> &_sdf,
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
/home/jaikrrishs/Desktop/forklift_gazebo/src/forklift_gazebo/plugins/fork_lift_world.cc: In member function ‘void forklift_gazebo::ForkLiftWorld::AddModel(gz::sim::v8::SdfEntityCreator&, const std::string&, const std::string&, double, double, double)’:
/home/jaikrrishs/Desktop/forklift_gazebo/src/forklift_gazebo/plugins/fork_lift_world.cc:50:44: warning: unused parameter ‘_creator’ [-Wunused-parameter]
   50 |   void AddModel(gz::sim::SdfEntityCreator &_creator,
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
---
Finished <<< forklift_gazebo [5.35s]

Summary: 1 package finished [5.46s]
  1 package had stderr output: forklift_gazebo
